# cortex_sdk_linux

./: .gitignore  CMakeLists.txt  README.md  README.txt  RTC_Cortex_bridge.cpp  RTC_Cortex_bridge.h  RTC_Cortex_bridgeComp.cpp  RTC_Cortex_bridgeService.idl  RTC_Cortex_bridgeService_impl.cpp  RTC_Cortex_bridgeService_impl.h  RTC_Cortex_bridge_.cpp  clientTest2.cpp  clienttest.cpp  cortex.cpp  cortex_socket.cpp  cortex_socket.h  cortex_unpack.h  m3x3.h
Cortex_sdk/: README.txt  clienttest.cpp  cortex.cpp  cortex_.cpp  cortex_unpack.cpp  m3x3.cpp
